--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "SET NODE_ENV=production&&webpack",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js",
     "start": "webpack-dev-server --inline --hot --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.8",
     "optimize-js-plugin": "0.0.4",
     "react": "^16.2.0",
